--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Radio Receiver",
-  "description": "Receive and listen to FM and AM radio broadcasts on your browser or ChromeBook using an RTL2832U-based USB digital TV tuner.",
+  "name": "Radio Receiver with mods by ayvex",
+  "description": "Ayvex mods to radio receiver ... FM and AM radio broadcasts on your browser or ChromeBook using an RTL2832U-based USB digital TV tuner.",
   "version": "1.1.5",
   "icons": {
     "16": "icon-16.png",
