--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,13 @@
 {
+  
+  "manifest_version":2,
+
   "name": "Radio Receiver with mods by ayvex",
   "description": "Ayvex mods to radio receiver ... FM and AM radio broadcasts on your browser or ChromeBook using an RTL2832U-based USB digital TV tuner.",
-  "version": "1.1.5",
+  "version": "1.1.1",
+
+
+
   "icons": {
     "16": "icon-16.png",
     "48": "icon-48.png",
@@ -12,7 +18,11 @@
       "scripts": ["main.js"]
     }
   },
+
+
+
   "permissions": [
+    //"background", //bugbug maybe later
     "storage",
     "usb",
     {"fileSystem": ["write"]}
